spacing & size fixes

--- a/src/styles.css
+++ b/src/styles.css
@@ -16,7 +16,7 @@ body {
 }
 
 h1 {
-    font-size: 4rem;
+    font-size: 3rem;
 }
 
 h2 {
@@ -32,7 +32,7 @@ h3 {
 }
 
 h3.subheading-text {
-  text-decoration: underline;
+  
 }
 
 h3 ul {
@@ -165,7 +165,7 @@ div.app-icon-box {
 /* section: hero */
 div#hero {
     background-color: #42244A;
-    padding: 2rem 0px 3rem 0px;
+    padding: 2rem 0px 2rem 0px;
 }
 
 div#hero div.image {
